--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/validation": "^5.0|^6.0|^7.0|^8.0"
+        "illuminate/validation": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "~3.4",
