--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/validation": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0"
+        "php": ">=7.0",
+        "illuminate/validation": "^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "~3.4",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~6.0.0"
     },
     "autoload": {
         "psr-4": {
